[gd_scene load_steps=3 format=2]

[ext_resource path="res://TabScreens/QueryBuilder/Components/VisualRules.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.294118 )

[node name="VisualRules" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelVisualRules" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuleFields" type="Tree" parent="PanelVisualRules"]
margin_right = 1016.0
margin_bottom = 515.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/selected_focus = SubResource( 1 )
columns = 2
allow_rmb_select = true
hide_root = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupVisualRuleField" type="PopupMenu" parent="PanelVisualRules/RuleFields"]
margin_right = 101.0
margin_bottom = 34.0
items = [ "Remove rule", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, 1, 0, null, "", true ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupVisualRuleCMatrix" type="PopupMenu" parent="PanelVisualRules/RuleFields/PopupVisualRuleField"]
margin_right = 101.0
margin_bottom = 52.0
items = [ "Add Ruleset", null, 0, false, false, 10, 0, null, "", false, "Add Color", null, 0, false, false, 11, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupVisualRuleCScale" type="PopupMenu" parent="PanelVisualRules/RuleFields/PopupVisualRuleField"]
margin_right = 101.0
margin_bottom = 34.0
items = [ "Add Ruleset", null, 0, false, false, 20, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupVisualRuleSScale" type="PopupMenu" parent="PanelVisualRules/RuleFields/PopupVisualRuleField"]
margin_right = 101.0
margin_bottom = 34.0
items = [ "Add ruleset", null, 0, false, false, 30, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupColorPicker" type="PopupPanel" parent="PanelVisualRules/RuleFields"]
margin_right = 309.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="PanelVisualRules/RuleFields/PopupColorPicker"]
margin_left = 4.0
margin_top = 4.0
margin_right = 305.0
margin_bottom = 440.0
presets_visible = false

[node name="BtRemoveAll" type="Button" parent="PanelVisualRules"]
margin_top = 519.0
margin_right = 1016.0
margin_bottom = 539.0
text = "Remove all visual rules"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelVisualRules"]
margin_top = 543.0
margin_right = 1016.0
margin_bottom = 563.0

[node name="Label" type="Label" parent="PanelVisualRules/HBoxContainer"]
margin_top = 3.0
margin_right = 82.0
margin_bottom = 17.0
text = "Default color"

[node name="DefaultColor" type="ColorRect" parent="PanelVisualRules/HBoxContainer"]
margin_left = 86.0
margin_right = 924.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="BtDefaultColor" type="Button" parent="PanelVisualRules/HBoxContainer"]
margin_left = 928.0
margin_right = 1016.0
margin_bottom = 20.0
text = "Select Color"

[connection signal="button_pressed" from="PanelVisualRules/RuleFields" to="." method="_on_RuleFields_button_pressed"]
[connection signal="item_edited" from="PanelVisualRules/RuleFields" to="." method="_on_RuleFields_item_edited"]
[connection signal="item_rmb_selected" from="PanelVisualRules/RuleFields" to="." method="_on_RuleFields_item_rmb_selected"]
[connection signal="id_pressed" from="PanelVisualRules/RuleFields/PopupVisualRuleField" to="." method="_on_PopupVisualRuleField_id_pressed"]
[connection signal="id_pressed" from="PanelVisualRules/RuleFields/PopupVisualRuleField/PopupVisualRuleCMatrix" to="." method="_on_PopupVisualRuleField_id_pressed"]
[connection signal="id_pressed" from="PanelVisualRules/RuleFields/PopupVisualRuleField/PopupVisualRuleCScale" to="." method="_on_PopupVisualRuleField_id_pressed"]
[connection signal="id_pressed" from="PanelVisualRules/RuleFields/PopupVisualRuleField/PopupVisualRuleSScale" to="." method="_on_PopupVisualRuleField_id_pressed"]
[connection signal="popup_hide" from="PanelVisualRules/RuleFields/PopupColorPicker" to="." method="_on_PopupColorPicker_popup_hide"]
[connection signal="pressed" from="PanelVisualRules/BtRemoveAll" to="." method="_on_BtRemoveAll_pressed"]
[connection signal="pressed" from="PanelVisualRules/HBoxContainer/BtDefaultColor" to="." method="_on_BtDefaultColor_pressed"]
